fix delete bottom on mobile phone not round

--- a/_sass/bulma/components/modal.sass
+++ b/_sass/bulma/components/modal.sass
@@ -17,6 +17,7 @@
 
 .modal-close
   +delete
+  padding: 0
   background: none
   height: 40px
   position: fixed
