--- a/_sass/bulma/elements/other.sass
+++ b/_sass/bulma/elements/other.sass
@@ -21,6 +21,7 @@
 
 .delete
   +delete
+  padding: 0
 
 .fa
   font-size: 21px
